--- a/style.css
+++ b/style.css
@@ -32,21 +32,13 @@ h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight:  400;}
 
 /* STYLE HERE */
 body {
+    overflow: hidden;
     background-color: #000;
     color: green;
     text-shadow: 3px 3px 2px rgb(28, 148, 28);
     font-family: "Press Start 2P";
 }
-h2:after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 0px 0px 0px 10px;
-    background: green;
-    width: 100px;
-    height: 100px;
-    z-index: 2;
-}
+
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -55,10 +47,23 @@ h2:after {
     padding: 15px;
 }
 
-.wrapper h1 {
+.terminal__logo {
     margin: 20px 0px 20px 0px;
     font-size: 50px;
     text-align: center;
+    transform: translateY(700%);
+}
+
+.terminal__logo-launched {
+    animation: floating 1s ease-out forwards  0s;
+}
+.start__button  {
+    position: relative;
+    top: 30vh;
+    opacity: 0;
+    width: 400px;
+    height: 150px;
+
 }
 .terminal__container {
     display: flex;
@@ -79,7 +84,13 @@ h2:after {
     min-height: 600px;
     max-width: 800px;
     max-height: 600px;
-    
+    opacity: 0;
+    transform: scale(100%, 0%);
+
+}
+
+.terminal-wrap-launched {
+    animation: launching 1.5s linear forwards 0s;
 }
 
 .terminal-text {
@@ -133,11 +144,22 @@ h2:after {
     text-shadow: 0px 0px 20px rgb(25, 210, 25);
 }
 
-@keyframes text-animation {
+@keyframes launching {
     from {
         opacity: 0;
+        transform: scale(100%, 0%);
     }
     to {
         opacity: 1;
+        transform: scale(100%);
+    }
+}
+
+@keyframes floating {
+    from {
+        transform: translateY(700%);
+    }
+    to {
+        transform: translateY(0%);
     }
 }
